<resources>
    <string name="app_name">NewsApp</string>
    <string name="settings_title">News Search Settings</string>
    <string name="news_subject_key">news_subject</string>
    <string name="news_subject_title">Subject to display</string>
    <string name="subject_default">recent events</string>
    <string name="apikey">522d7b3ecc064c43bdc24d2513a00b9b</string>
    <string name="exact_match_key">exact_match</string>
    <string name="exact_match_title">Show exact match only:</string>
    <string name="exact_match_summary">Check box to only show exact matches</string>
    <string name="andor_value_default">Or</string>
    <string name="andor_value_key">andor_value</string>
    <string name="andor_value_title">Second Search Operator</string>
    <string name="second_search_subject_default" />
    <string name="second_search_subject_key">second_search</string>
    <string name="second_search_subject_title">Second Search Subject</string>
    <string name="exact_match_default">false</string>

</resources>
